--- a/customers.html
+++ b/customers.html
@@ -4,19 +4,22 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact - Connectwell Ventures</title>
+  <title>Products - Connectwell Ventures</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
+  <!-- Favicons -->
   <link href="assets/img/CV.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
+  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -25,17 +28,45 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+
+    th,
+    td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: left;
+    }
+
+    th {
+      background-color: #f2f2f2;
+    }
+
+    tr:nth-child(even) {
+      background-color: #f9f9f9;
+    }
+
+    tr:hover {
+      background-color: #ddd;
+    }
+  </style>
+
 </head>
 
-<body class="contact-page">
+<body class="about-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <!-- <h1 class="sitename">Connectwell Venture</h1> -->
         <h1 class="sitename" style="background-color: white;">
           <img src="/assets/img/connectwell_ventures.png" alt="">
         </h1>
@@ -43,10 +74,8 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home<br></a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="products.html">Products</a></li>
-          <li><a href="contact.html" class="active">Contact</a></li>
+          <li><a href="index.html">Go To Home<br></a></li>
+          <li><a href="customers.html" class="active">Customer List</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -56,113 +85,49 @@
 
   <main class="main">
 
-    <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade"
       style="background-image: url(assets/img/page-title-bg.jpg);">
       <div class="container position-relative">
-        <h1>Contact</h1>
-        <p>
-
-          To facilitate interactions with our key clients, our offices are conveniently located within a few miles of
-          their facilities in India. Our company provides free parking at all our locations.
-
-        </p>
-        <p>sales@connectwellventures.com</p>
+        <h1>Customers</h1>
+        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam
+          molestias.</p>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Contact</li>
+            <li class="current">Customers</li>
           </ol>
         </nav>
       </div>
     </div>
 
+    <section id="services" class="services section light-background">
 
-    <section id="contact" class="contact section">
+      <div class="container section-title" data-aos="fade-up">
+        <span>Our Customers<br></span>
+        <h2>Our Customers</h2>
+      </div>
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container">
 
-        <div class="mb-4" data-aos="fade-up" data-aos-delay="200">
-          <iframe style="border:0; width: 100%; height: 270px;"
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d29417.491468211403!2d86.227102!3d22.832591!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f5e2482e216525%3A0x7dfcde2b66421e05!2sDimna%2C%20Mango%2C%20Jamshedpur%2C%20Jharkhand%2C%20India!5e0!3m2!1sen!2sus!4v1726393785452!5m2!1sen!2sus"
-            frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Email</th>
+              <th>Phone</th>
+              <th>Subject</th>
+              <th>Message</th>
+            </tr>
+          </thead>
+          <tbody id="submissionsList">
 
-        <div class="row gy-4">
-
-          <div class="col-lg-4">
-            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-geo-alt flex-shrink-0"></i>
-
-              <div>
-                <h3>Address</h3>
-                <p>Dimna Road, Jamshedpur 535022, India </p>
-              </div>
-            </div><!-- End Info Item -->
-
-            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
-              <i class="bi bi-telephone flex-shrink-0"></i>
-              <div>
-                <h3>Call Us</h3>
-                <p>+91 7004157286</p>
-              </div>
-            </div>
-
-            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="500">
-              <i class="bi bi-envelope flex-shrink-0"></i>
-              <div>
-                <h3>Email Us</h3>
-                <p>info@connectwellventures.com</p>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-8">
-            <form id="userForm" method="post" class="php-email-form" data-aos="fade-up"
-              data-aos-delay="200">
-              <div class="row gy-4">
-
-                <div class="col-md-6">
-                  <input type="text" id="name" name="name" class="form-control" placeholder="Your Name" required="">
-                </div>
-
-                <div class="col-md-6 ">
-                  <input type="email" id="email" class="form-control" name="email" placeholder="Your Email" required="">
-                </div>
-
-                <div class="col-md-6 ">
-                  <input type="text" id="phone" class="form-control" name="phone" placeholder="Your Phone No" required="">
-                </div>
-
-                <div class="col-md-6">
-                  <input type="text" id="subject" class="form-control" name="subject" placeholder="Subject" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <textarea class="form-control" id="message" name="message" rows="6" placeholder="Message" required=""></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit">Send Message</button>
-                </div>
-
-              </div>
-            </form>
-          </div>
-
-        </div>
-
+          </tbody>
+        </table>
       </div>
 
     </section>
 
   </main>
-
 
   <footer id="footer" class="footer dark-background">
 
@@ -232,8 +197,9 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
-  <script>
 
+  <script>
+    // Initialize Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyB6s7lp6mTJefqK5TPyfwSWQUk75uhHV6k",
       authDomain: "connectwell-venture.firebaseapp.com",
@@ -245,50 +211,38 @@
 
     const app = firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
+    const auth = firebase.auth();
 
-    const form = document.getElementById('userForm');
-    form.addEventListener('submit', function (event) {
-      event.preventDefault();
+    const submissionsList = document.getElementById('submissionsList');
 
-      const name = document.getElementById('name').value.trim();
-      const email = document.getElementById('email').value.trim();
-      const phone = document.getElementById('phone').value.trim();
-      const subject = document.getElementById('subject').value.trim();
-      const message = document.getElementById('message').value.trim();
-
-      if (!name || !phone) {
-        alert('All fields are required!');
-        return;
+    // Check if the user is logged in
+    auth.onAuthStateChanged(user => {
+      if (user) {
+        db.collection('customers').get().then((querySnapshot) => {
+          querySnapshot.forEach((doc) => {
+            const data = doc.data();
+            const row = document.createElement('tr');
+            row.innerHTML = `
+              <td>${data.name}</td>
+              <td>${data.email}</td>
+              <td>${data.phone}</td>
+              <td>${data.subject}</td>
+              <td>${data.message}</td>
+            `;
+            submissionsList.appendChild(row);
+          });
+        }).catch((error) => {
+          console.error("Error retrieving submissions:", error);
+        });
+      } else {
+        window.location.href = 'login.html';
       }
-
-      if (!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)) {
-        alert('Please enter a valid email.');
-        return;
-      }
-
-      if (!/^\d{10}$/.test(phone)) {
-        alert('Please enter a valid 10-digit phone number.');
-        return;
-      }
-
-      db.collection('customers').add({
-        name: name,
-        email: email,
-        phone: phone,
-        subject: subject,
-        message: message,
-      }).then(() => {
-        alert('Customer detail added successfully!');
-        form.reset();
-      }).catch((error) => {
-        console.error('Error submitting form:', error);
-      });
     });
-
   </script>
 
+
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
+  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
